--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.container{
+  width: 80%;
+  margin-right:auto;
+  margin-left: auto; 
+  position: relative; 
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
