--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -9,7 +9,7 @@
 
 nav {
     background-color: #222;
-    color: #fff;
+    color: #ffffff;
     height: 6rem;
     width: 100%;
     display: flex;
@@ -21,7 +21,7 @@ nav {
 
 ul li a {
     text-decoration: none;
-    color: #fff;
+    color: #ffffff;
 }
 
 ul li {
@@ -29,6 +29,7 @@ ul li {
     padding: 10px 14px;
     cursor: pointer;
     transition: background-color .2s;
+    border-radius: 5px;
 }
 
 ul li:hover {
