--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -1,3 +1,31 @@
 h1 {
     text-align: center;
 }
+
+.greeting{
+    font-size: 3rem;
+    margin-top: 8rem;
+}
+
+.name{
+    padding: 5px;
+    border-radius: 3px;
+    animation: pisca 5s infinite linear;
+}
+
+@keyframes pisca {
+    0% {
+        background-color: #fff;
+        color: #000;
+    }
+
+    50% {
+        background-color: #000;
+        color: #ffbb00;
+    }
+
+    100% {
+        background-color: #fff;
+        color: #000;
+    }
+}
