--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,6 +1,6 @@
 footer {
     bottom: 0;
-    position: relative;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
