--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,10 +1,9 @@
 footer {
-    bottom: 0;
-    position: fixed;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100%; 
     flex-wrap: wrap;
     flex-direction: column;
     font-weight: 600;
