--- a/src/Pages/NewProject/NewProject.css
+++ b/src/Pages/NewProject/NewProject.css
@@ -37,3 +37,10 @@ select {
     border: none;
     margin-bottom: 1rem;
 }
+
+@media only screen and (max-width: 600px) {
+    input,
+    select {
+        width: auto !important;
+    }
+}
