--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -8,7 +8,7 @@
 .name {
     padding: 5px;
     border-radius: 3px;
-    animation: pisca 8s infinite;
+    animation: pisca 15s infinite;
     font-weight: 600;
 }
 
@@ -64,6 +64,21 @@
         color: #000;
     }
 
+    10% {
+        background-color: #ececec;
+        color: #000;
+    }
+
+    20% {
+        background-color: #ececec;
+        color: #000;
+    }
+
+    30% {
+        background-color: #000;
+        color: #ffbb00;
+    }
+
     40% {
         background-color: #000;
         color: #ffbb00;
@@ -82,6 +97,11 @@
     70% {
         background-color: #000;
         color: #ffbb00;
+    }
+
+    80% {
+        background-color: #ececec;
+        color: #000;
     }
 
     100% {
