--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -50,7 +50,54 @@ ul {
     float: left;
 }
 
+.icon {
+    display: none;
+}
+
 .logo a {
     text-decoration: none;
     color: #fff;
+}
+
+.iconeFechado,
+.iconeAberto {
+    height: 50px;
+    width: auto;
+    color: #000;
+    display: none;
+}
+
+.iconAtivo {
+    display: None;
+}
+
+.sideList {
+    display: None;
+}
+
+
+@media only screen and (max-width:700px) {
+    nav {
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 520px) {
+
+    nav {
+        justify-content: space-around;
+    }
+
+    ul {
+        display: none;
+    }
+
+    .logo {
+        font-size: 2.5rem;
+    }
+
+    .iconeFechado,
+    .iconeAberto {
+        display: flex;
+    }
 }
